--- a/motorgoat-mobiles-mgm/src/App.css
+++ b/motorgoat-mobiles-mgm/src/App.css
@@ -37,11 +37,19 @@
   }
 }
 
+.header {
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  background-color: black;
+  color: teal;
+}
+
 nav.navbar {
   background-color: white;
   font-size: 25px;
-  color: white;
-  padding: 40px;
+  color: teal;
+  padding: 20px;
   font-family: Arial;
   text-align: center;
 }
