--- a/motorgoat-mobiles-mgm/src/App.css
+++ b/motorgoat-mobiles-mgm/src/App.css
@@ -38,8 +38,10 @@
 }
 
 .header {
+  font-family: "Sedgwick Ave Display";
+  text-decoration: underline;
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
   padding: 10px;
   background-color: black;
   color: teal;
