--- a/motorgoat-mobiles-mgm/src/App.css
+++ b/motorgoat-mobiles-mgm/src/App.css
@@ -51,9 +51,9 @@ Header {
   color: #61dafb;
 }
 
-.heading#heading {
-/* backdrop-filter: blur(30px); */
-}
+/* .heading#heading {
+backdrop-filter: blur(30px);
+} */
 
 .head-pic {
   width: 400px;
@@ -94,7 +94,7 @@ Header {
 
 .nav-link:hover {
   border-left: .5px solid #61dafb; 
-  border-top: .5px dashed #61dafb; 
+  border-top: none; 
   border-bottom: none; 
 }
 
@@ -113,6 +113,7 @@ Header {
   width: 150px;
   height: 100px;
   align-items: center;
+
 }
 
 .nav-text {
@@ -129,7 +130,7 @@ Header {
 }
 
 .new-car-form {
-  max-width: 400px; 
+  max-width: 600px; 
   margin: 0 auto; 
   padding: 20px;
   border: 2px solid #ccc;
@@ -165,19 +166,17 @@ button[type="submit"]:hover {
 }
 
 .card img {
-  border: 1px solid #ccc; 
-  border-radius: 5px; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 80%; 
-  height: auto; 
+  width: 80%;
+  border-radius: 8px;
   object-fit: cover;
+  
 }
 
 .card {
-  width: 10%; 
-  height: auto; 
+  width: 80%; 
+  height: auto;
+  max-height: 200px;
+  object-fit: cover;
   display: flex;
   flex-direction: column;
   align-items: center; 
@@ -187,6 +186,7 @@ button[type="submit"]:hover {
   border: 1px solid #ddd;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  margin-bottom: 10px;
 }
 
 .search-bar {
@@ -258,5 +258,10 @@ label {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
+  text-align: center;
+}
+
+.card-content {
+  padding: 10px;
   text-align: center;
 }
